@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 21-04-2006 changed: progress dialog update() python method can now update the dialog text, thanks to Donno.
  - 21-04-2006 fixed: [ 1470736 ] Kai game launch problems.
  - 21-04-2006 added: Indonesian language file (Thnx to djoens)
  - 21-04-2006 updated: Swedish language file (Thnx to blittan)
